--- a/app/src/main/res/layout/integrated_keyboard.xml
+++ b/app/src/main/res/layout/integrated_keyboard.xml
@@ -3,22 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/integrated_keyboard"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <TextView
         android:id="@+id/key01"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="1"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,15 +27,15 @@
 
     <TextView
         android:id="@+id/key02"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="2"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key01"
         app:layout_constraintTop_toTopOf="@+id/key01"
@@ -43,15 +43,15 @@
 
     <TextView
         android:id="@+id/key03"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="3"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key02"
         app:layout_constraintTop_toTopOf="@+id/key02"
@@ -59,15 +59,15 @@
 
     <TextView
         android:id="@+id/key04"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="4"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key03"
         app:layout_constraintTop_toTopOf="@+id/key03"
@@ -75,15 +75,15 @@
 
     <TextView
         android:id="@+id/key05"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="5"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key04"
         app:layout_constraintTop_toTopOf="@+id/key04"
@@ -91,15 +91,15 @@
 
     <TextView
         android:id="@+id/key06"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="6"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key05"
         app:layout_constraintTop_toTopOf="@+id/key05"
@@ -107,15 +107,15 @@
 
     <TextView
         android:id="@+id/key07"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="7"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key06"
         app:layout_constraintTop_toTopOf="@+id/key06"
@@ -123,15 +123,15 @@
 
     <TextView
         android:id="@+id/key08"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginTop="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="8"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/key01"
         app:layout_constraintTop_toBottomOf="@+id/key01"
@@ -139,15 +139,15 @@
 
     <TextView
         android:id="@+id/key09"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="9"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key08"
         app:layout_constraintTop_toTopOf="@+id/key08"
@@ -155,15 +155,15 @@
 
     <TextView
         android:id="@+id/key10"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="10"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key09"
         app:layout_constraintTop_toTopOf="@+id/key09"
@@ -171,15 +171,15 @@
 
     <TextView
         android:id="@+id/key11"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="11"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key10"
         app:layout_constraintTop_toTopOf="@+id/key10"
@@ -187,15 +187,15 @@
 
     <TextView
         android:id="@+id/key12"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="12"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key11"
         app:layout_constraintTop_toTopOf="@+id/key11"
@@ -203,15 +203,15 @@
 
     <TextView
         android:id="@+id/key13"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="13"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key12"
         app:layout_constraintTop_toTopOf="@+id/key12"
@@ -219,15 +219,15 @@
 
     <TextView
         android:id="@+id/key14"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
         android:layout_marginStart="1dp"
-        android:background="@color/button"
+        android:background="@drawable/custom_textview"
         android:clickable="true"
         android:gravity="center"
         android:text="14"
-        android:textColor="@color/button_text"
-        android:textSize="24sp"
+        android:textColor="@color/button"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/key13"
         app:layout_constraintTop_toTopOf="@+id/key13"
@@ -235,18 +235,20 @@
 
     <ImageButton
         android:id="@+id/btnBackSpace"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@color/button2_color"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
+        android:layout_marginStart="1dp"
+        android:background="@drawable/custom_textview"
         app:layout_constraintStart_toEndOf="@+id/key07"
         app:layout_constraintTop_toTopOf="@+id/key07"
         app:srcCompat="@drawable/delete_left_solid" />
 
     <ImageButton
         android:id="@+id/btnShuffle"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@color/button2_color"
+        android:layout_width="45sp"
+        android:layout_height="45sp"
+        android:layout_marginStart="1dp"
+        android:background="@drawable/custom_textview"
         app:layout_constraintStart_toEndOf="@+id/key14"
         app:layout_constraintTop_toTopOf="@+id/key14"
         app:srcCompat="@drawable/arrows_turn_to_dots_solid" />
