--- a/app/src/main/res/layout/dialog_setting.xml
+++ b/app/src/main/res/layout/dialog_setting.xml
@@ -44,7 +44,7 @@
                 app:rippleColor="@color/background" />
 
             <Switch
-                android:id="@+id/swSettingUseIntegratedKeyboard"
+                android:id="@+id/swSettingKeyboard"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -74,8 +74,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="@+id/swSettingUseIntegratedKeyboard"
-                app:layout_constraintTop_toBottomOf="@+id/swSettingUseIntegratedKeyboard"
+                app:layout_constraintStart_toStartOf="@+id/swSettingKeyboard"
+                app:layout_constraintTop_toBottomOf="@+id/swSettingKeyboard"
                 app:srcCompat="@drawable/volume_off_solid" />
 
             <SeekBar
