--- a/app/src/main/res/layout/dialog_setting.xml
+++ b/app/src/main/res/layout/dialog_setting.xml
@@ -24,90 +24,73 @@
             android:paddingTop="5dp"
             android:paddingBottom="10sp">
 
-            <Button
-                android:id="@+id/btnSettingClose"
-                style="@style/Widget.Material3.Button.IconButton.Outlined"
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_marginEnd="8dp"
-                android:background="@color/button2_color"
-                android:gravity="center|center_horizontal|center_vertical"
-                android:shadowColor="#512DA8"
-                android:textColor="@color/button2_text"
-                android:textColorHighlight="#B39DDB"
-                android:textColorHint="#9FA8DA"
-                app:icon="@drawable/baseline_close_24"
-                app:iconGravity="textTop"
-                app:iconSize="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:rippleColor="@color/background" />
-
             <Switch
                 android:id="@+id/swSettingKeyboard"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
-                android:text="Use integrated keyboard"
-                app:layout_constraintEnd_toStartOf="@+id/btnSettingClose"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/button_image_disable"
+                android:padding="10dp"
+                android:text="Android Keyboard"
+                android:textColor="@color/button2_color"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:layout_constraintTop_toBottomOf="@+id/imgBtnSound"
                 tools:ignore="UseSwitchCompatOrMaterialXml" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:background="@drawable/background_gradient_zeus_miracle"
+                android:padding="10dp"
                 android:text="Quick Setting"
-                android:textSize="16sp"
+                android:textColor="@color/button"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/btnSettingClose"
-                app:layout_constraintEnd_toStartOf="@+id/btnSettingClose"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="@+id/swSettingKeyboard"
-                app:layout_constraintTop_toBottomOf="@+id/swSettingKeyboard"
-                app:srcCompat="@drawable/volume_off_solid" />
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:max="100"
-                android:progress="30"
-                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-                app:layout_constraintEnd_toStartOf="@+id/btnSettingClose"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toTopOf="@+id/imageButton" />
-
-            <ImageButton
-                android:id="@+id/btnSettingFullscreen"
-                android:layout_width="64dp"
-                android:layout_height="53dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/imageButton"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton"
-                app:srcCompat="@drawable/arrows_to_circle_solid" />
 
             <Button
                 android:id="@+id/btnSettingDisableAds"
                 style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:text="Disable Ads"
                 app:icon="@drawable/audio_description_solid"
-                app:layout_constraintBottom_toBottomOf="@+id/btnSettingFullscreen"
-                app:layout_constraintEnd_toEndOf="@+id/seekBar"
-                app:layout_constraintTop_toTopOf="@+id/btnSettingFullscreen" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/swSettingKeyboard" />
+
+            <ImageView
+                android:id="@+id/imgBtnSound"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="28dp"
+                android:background="@drawable/button_image_enable"
+                android:padding="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:srcCompat="@drawable/volume_high_solid" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="48sp"
+                android:layout_height="48sp"
+                android:layout_marginStart="16dp"
+                android:background="@drawable/button_image_disable"
+                app:layout_constraintStart_toEndOf="@+id/imgBtnSound"
+                app:layout_constraintTop_toTopOf="@+id/imgBtnSound"
+                app:srcCompat="@drawable/hand_point_up_solid" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
