--- a/app/src/main/res/drawable/button_image_disable.xml
+++ b/app/src/main/res/drawable/button_image_disable.xml
@@ -2,13 +2,19 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
+    <padding
+        android:top="2dp"
+        android:bottom="2dp"
+        android:left="2dp"
+        android:right="2dp"/>
+
+    <solid android:color="#C5CAE9"/>
 
     <size android:height="30dp"
         android:width="30dp"/>
-    <solid
-        android:color="@color/button2_text" />
+
     <stroke
-        android:color="@color/button"
+        android:color="#929CCF"
         android:dashWidth="10px"
         android:dashGap="0dp"
         android:width="2dp"/>
