--- a/app/src/main/res/layout/question_span.xml
+++ b/app/src/main/res/layout/question_span.xml
@@ -12,10 +12,14 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
-        android:gravity="center"
         android:autoSizeTextType="uniform"
+        android:background="@drawable/button_image_disable"
+        android:gravity="center"
         android:paddingHorizontal="10dp"
         android:text="ketika matiketika matiketika matiketika matiketika mati"
+        android:textColor="#5C6BC0"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btnNextQuestion"
         app:layout_constraintStart_toEndOf="@+id/btnPrevQuestion"
         app:layout_constraintTop_toTopOf="@+id/btnPrevQuestion"
