--- a/app/src/main/res/layout/question_span.xml
+++ b/app/src/main/res/layout/question_span.xml
@@ -13,11 +13,11 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:autoSizeTextType="uniform"
-        android:background="@drawable/button_image_disable"
+        android:background="@drawable/question_span_background"
         android:gravity="center"
         android:paddingHorizontal="10dp"
         android:text="ketika matiketika matiketika matiketika matiketika mati"
-        android:textColor="#5C6BC0"
+        android:textColor="@color/button"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/btnNextQuestion"
