--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -18,7 +18,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container1"
@@ -47,10 +48,11 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/container2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/background_gradient_zeus_miracle"
+                android:foregroundGravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/container1">
@@ -69,18 +71,23 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent">
 
-                        <FrameLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/frame3"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center">
 
                             <include
                                 android:id="@+id/include_board"
                                 layout="@layout/board_ten"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content" />
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
-                        </FrameLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.core.widget.NestedScrollView>
                 </HorizontalScrollView>
 
