--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,18 +5,20 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="CustomActivityAnimation" parent="@android:style/Animation.Activity">
-        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
-        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
-        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
-        <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
+    <style name="DialogFadeAnim">
+        <item name="android:windowEnterAnimation">@anim/dialog_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_fade_out</item>
     </style>
 
-    <style name="LoginDialogAnim">
-        <item name="android:windowEnterAnimation">@anim/slide_in</item>
-        <item name="android:windowExitAnimation">@anim/slide_out</item>
+    <style name="DialogTopAnim">
+        <item name="android:windowEnterAnimation">@anim/dialog_slide_top_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_slide_top_out</item>
     </style>
 
+    <style name="DialogBottomAnim">
+        <item name="android:windowEnterAnimation">@anim/dialog_slide_bottom_out</item>
+        <item name="android:windowExitAnimation">@anim/dialog_slide_bottom_in</item>
+    </style>
 
     <style name="Theme.TTS" parent="Base.Theme.TTS" >
 
